Update the viewport height for opening and fix the placeholder's z-index of the email field

--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
+    height: calc(100vh - var(--navigator--height));
     justify-content: center;
 }
 
@@ -103,6 +103,7 @@ body {
     border-color: transparent;
     font-size: 2em;
     transition: all 300ms ease-in-out;
+    z-index: -1;
 }
 
 .btn {
@@ -366,7 +367,7 @@ body {
 
 @media screen and (max-width: 800px) {
     .site-info {
-        height: 100vh;
+        height: calc(100vh);
     }
 
     .site-info__links {
